@@ -1,6 +1,5 @@
 package com.vetCare.VetCare.application.service.impl;
 
-import com.vetCare.VetCare.application.dto.request.OrderItemRequestDto;
 import com.vetCare.VetCare.application.dto.request.OrderRequestDto;
 import com.vetCare.VetCare.application.dto.response.OrderResponseDto;
 import com.vetCare.VetCare.application.mapper.OrderMapper;
@@ -13,18 +12,16 @@ import com.vetCare.VetCare.domain.model.enums.OrderStatus;
 import com.vetCare.VetCare.domain.repository.OrderRepository;
 import com.vetCare.VetCare.domain.repository.ProductRepository;
 import com.vetCare.VetCare.domain.repository.UserRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
+import java.time.LocalDateTime;
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
     private final UserRepository userRepository;
@@ -32,72 +29,53 @@ public class OrderServiceImpl implements OrderService {
     private final OrderMapper orderMapper;
 
     @Override
-    @Transactional
-    public OrderResponseDto createOrder(OrderRequestDto dto, User user) {
+    public OrderResponseDto create(OrderRequestDto dto) {
 
-        Order order = new Order();
-        order.setUser(user);
-        order.setAddress(dto.getAddress());
-        order.setStatus(OrderStatus.PENDING);
+        // 1️⃣ Obtener usuario
+        User user = userRepository.findById(dto.getUserId())
+                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
 
+        // 2️⃣ Crear entidad Order desde DTO
+        Order order = orderMapper.toEntity(dto, user);
+
+        // 3️⃣ Calcular totales
         BigDecimal subtotal = BigDecimal.ZERO;
 
-        List<OrderItem> items = new ArrayList<>();
+        for (OrderItem item : order.getItems()) {
+            Product product = productRepository.findById(item.getProduct().getId())
+                    .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
 
-        for (OrderItemRequestDto itemDto : dto.getItems()) {
-
-            Product product = productRepository.findById(itemDto.getProductId())
-                    .orElseThrow(() ->
-                            new RuntimeException("Producto no encontrado con ID: " + itemDto.getProductId())
-                    );
-
-            if (product.getStockQuantity() < itemDto.getQuantity()) {
-                throw new RuntimeException(
-                        "Stock insuficiente para el producto: " + product.getName()
-                );
-            }
-
-            BigDecimal itemSubtotal =
-                    product.getPrice().multiply(BigDecimal.valueOf(itemDto.getQuantity()));
-
-            OrderItem item = new OrderItem();
-            item.setProduct(product);
-            item.setQuantity(itemDto.getQuantity());
             item.setUnitPrice(product.getPrice());
-            item.setSubtotal(itemSubtotal);
-            item.setOrder(order);
+            item.setSubtotal(
+                    product.getPrice()
+                            .multiply(BigDecimal.valueOf(item.getQuantity()))
+            );
 
-            items.add(item);
-            subtotal = subtotal.add(itemSubtotal);
-
-            // 🔥 Descontar stock
-            product.setStockQuantity(product.getStockQuantity() - itemDto.getQuantity());
+            subtotal = subtotal.add(item.getSubtotal());
         }
 
-        BigDecimal tax = subtotal.multiply(BigDecimal.valueOf(0.18));
-        BigDecimal total = subtotal.add(tax);
-
-        order.setItems(items);
         order.setSubtotal(subtotal);
-        order.setTax(tax);
+        order.setTax(subtotal.multiply(BigDecimal.valueOf(0.18))); // IGV
         order.setShippingCost(BigDecimal.ZERO);
-        order.setTotal(total);
+        order.setTotal(order.getSubtotal().add(order.getTax()));
 
-        return orderMapper.toDto(orderRepository.save(order));
+        // 4️⃣ Guardar
+        Order saved = orderRepository.save(order);
+
+        // 5️⃣ Retornar DTO
+        return orderMapper.toDto(saved);
     }
 
     @Override
-    @Transactional
-    public List<OrderResponseDto> getOrdersByUser(User user) {
+    public List<OrderResponseDto> findByUser(Long userId) {
 
-        return orderRepository.findByUser_Id(user)
+        return orderRepository.findByUser_Id(userId)
                 .stream()
                 .map(orderMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional
     public OrderResponseDto findById(Long id) {
 
         Order order = orderRepository.findById(id)
@@ -106,5 +84,23 @@ public class OrderServiceImpl implements OrderService {
         return orderMapper.toDto(order);
     }
 
+    @Override
+    public List<OrderResponseDto> findAll() {
+        return orderRepository.findAll()
+                .stream()
+                .map(orderMapper::toDto)
+                .collect(Collectors.toList());
+    }
 
+    @Override
+    public OrderResponseDto updateStatus(Long id, OrderStatus status) {
+        Order order = orderRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Orden no encontrada"));
+
+        order.setStatus(status);
+        order.setUpdatedAt(LocalDateTime.now());
+
+        Order updated = orderRepository.save(order);
+        return orderMapper.toDto(updated);
+    }
 }
